--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^9.0.0-rc.3",
+    "react-use-gesture": "^7.0.15",
     "typescript": "~3.7.2"
   },
   "scripts": {
