--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^5.1.14",
     "bulma": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.1",
     "react-spring": "^9.0.0-rc.3",
     "react-use-gesture": "^7.0.15",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.3.1",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.4.0"
   }
 }
