--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/web": "^9.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,14 +12,13 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.15",
+    "@use-gesture/react": "^10.1.1",
     "bulma": "^0.9.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
-    "react-spring": "^9.3.0",
-    "react-use-gesture": "^9.1.3",
     "sass-loader": "^12.2.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.4"
